# openai_mcp_test

./: .gitignore  client.py  client_claude.py  client_http.py  client_openai.py  client_sse.py  client_with_servers.py  client_with_single_server.py  http_google_search.py  mcp_servers_sample.json  pyproject.toml  server_google_search.py  server_shell_helper.py  server_spotify.py  server_sse_add.py  shell_helper.py  sse_google_search.py
claude_config_files/: 00_claude_desktop_config_original.json  01_claude_desktop_config_path_in_args.json  02_claude_desktop_search.json
