[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.12",
    "googlesearch-python>=1.3.0",
    "httpx[cli]>=0.28.1",
    "mcp[cli]>=1.3.0",
    "openai>=1.68.2",
    "ptpython>=3.0.30",
    "spotipy>=2.25.1",
]
